deployments/nginx_example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webfronteg
spec:
  selector:
    matchLabels:
      app: webfronteg
  template:
    metadata:
      labels:
        app: webfronteg
    spec:
      containers:
      - name: webfronteg
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc_webfronteg
spec:
  selector:
    app: webfronteg
  ports:
  - port: 80
    targetPort: 80
