deployments/nginx_example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-webfronteg
  labels:
      name: ing-webfronteg
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: "/"
        backend:
          serviceName: svc-webfronteg
          servicePort: 80
